--- a/代码讲解.md
+++ b/代码讲解.md
@@ -1,1 +1,1 @@
-### 主要的代码是model.py train.py，那个train_test_view.py文件是用于swan库的使用，可以显示训练过程。
+### 主要的代码是model.py train.py，那个train_test_view.py文件是用于swan库的使用（可以不使用！），可以显示训练过程。
